# osm_categorizer

./: .gitignore  README.md  README_old.md  RunNetAPy.py  RunNetAPy_ListOfPoints.py  RunNetAPy_from_file.py  analyze_cycleway_service.py  app.py  assessor_manual.py  categories_updated.qml  debug_freiburg.py  explore_service_roads.py  investigate_bicycle_roads.py  main.py  manual_assessor_test.py  pyproject.toml  requirements.txt  setup.py  test_hierarchy_change.py
QGIS-Kategorisierung/: führungsform.qml  kategorisierung_ip.sql
assessor/: __init__.py  assessor_free.py  assessors.py  defaults.py  exceptions.py  networks.py  profiles.py
netapy/: __init__.py  assessor_free.py  assessors.py  assessors_out.py  defaults.py  networks.py
static/js/: leaflet.js
templates/: index.html
tests/: assessor_manual.py  assessor_test.py  free_assessor_test.py
